--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,8 @@
 }
 
 .jmb-desa .title h1 {
-    font-weight: 600;
+    font-weight: 700;
+    font-size: 48px;
     color: var(--primary-color);
 }
 
